@@ -31,7 +31,6 @@ import java.io.PrintWriter;
 import java.text.BreakIterator;
 import java.text.Collator;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.IllformedLocaleException;
 import java.util.List;
@@ -72,11 +71,6 @@ import static jdk.javadoc.internal.tool.Main.Result.*;
 /**
  * Main program of Javadoc.
  * Previously named "Main".
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
  */
 public class Start {
 
@@ -349,7 +343,7 @@ public class Start {
             error("main.cant.read", e.getMessage());
             return ERROR;
         }
-        return begin(allArgs, Collections.emptySet());
+        return begin(allArgs, Set.of());
     }
 
     // Called by the JSR 199 API
@@ -638,7 +632,7 @@ public class Start {
                             text = log.getText("main.unnecessary_arg_provided", argBase);
                             throw new OptionException(ERROR, this::showUsage, text);
                         case 1:
-                            if (!opt.process(arg, Collections.singletonList(argVal))) {
+                            if (!opt.process(arg, List.of(argVal))) {
                                 m = -1;
                             }
                             break;
